# haskeleton

./: .ghci  .gitignore  .stylish-haskell.yaml  .travis.yml  Benchmark.hs  CHANGELOG.md  CONTRIBUTING.md  HLint.hs  Ham.hs  LICENSE.md  LICENSE.txt  Main.hs  Makefile  README.md  Setup.hs  Tests.hs  Vagrantfile  generate.hs  generate.rb  ham.cabal  haskeleton.cabal  haskeleton.sublime-project  hop.cabal  index.html  params.json
bench/: Main.hs
benchmark/: Bench.hs  FooBench.hs  HaskeletonBench.hs
benchmarks/: HaskeletonBench.hs  HopBench.hs  Main.hs
package-name/: .gitignore  .gitignore.template  .stylish-haskell.yaml  .travis.yml  .travis.yml.template  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.md.template  HLint.hs  HLint.hs.template  Haskeleton.hs.template  LICENSE.md.template  LICENSE.txt.template  Makefile.template  README.md.template  cabal.config  haskeleton.hs.template  package-name.cabal  package-name.cabal.template
package-name/benchmark/: Bench.hs.template  ModuleNameBench.hs.template
package-name/executable/: Main.hs.template
package-name/test-suite/: DocTest.hs.template  HLint.hs  HPC.hs  HPC.hs.template  Haddock.hs  Haddock.hs.template  ModuleNameSpec.hs.template  Spec.hs.template
source/: Hop.hs  Main.hs
test/: HopSpec.hs  Main.hs
test-suite/: DocTest.hs  FooSpec.hs  HLint.hs  HPC.hs  HaskeletonSpec.hs
tests/: DocTest.hs  HLint.hs  HPC.hs  Haddock.hs  HopSpec.hs
