build-type:    Simple
cabal-version: >= 1.18
name:          ham
version:       0.0.0

library
  build-depends:    base == 4.5.*
  default-language: Haskell2010
  exposed-modules:  Ham

executable ham
  build-depends:    base == 4.5.*
  default-language: Haskell2010
  main-is:          Main.hs

Test-Suite test-ham
  build-depends:    base == 4.5.*
                  , Cabal == 1.18.*
  default-language: Haskell2010
  test-module:      Tests
  type:             detailed-0.9

Benchmark bench-ham
  build-depends:    base == 4.5.*
                  , time == 1.4.*
  default-language: Haskell2010
  main-is:          Benchmark.hs
  type:             exitcode-stdio-1.0
