author:
    Taylor Fausak
bug-reports:
    https://github.com/tfausak/haskeleton/issues
build-type:
    Simple
cabal-version:
    >= 1.18
category:
    Development
copyright:
    2014 Taylor Fausak <taylor@fausak.me>
description:
    This is a complete Cabal package including a library, an executable, a test
    suite, and some benchmarks.
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
homepage:
    https://github.com/tfausak/haskeleton
license-file:
    LICENSE.txt
license:
    MIT
maintainer:
    taylor@fausak.me
name:
    haskeleton
synopsis:
    A Haskell project skeleton.
version:
    0.0.0

source-repository head
    location:
        git://github.com/tfausak/haskeleton.git
    type:
        git

flag documentation
    default:
        False

benchmark benchmarks
    build-depends:
        base == 4.*
      , criterion == 0.6.*
      , haskeleton
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0

executable haskeleton
    build-depends:
        base == 4.*
      , haskeleton
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

library
    build-depends:
        base == 4.*
    default-language:
        Haskell2010
    exposed-modules:
        Haskeleton
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

    if flag(documentation)
        build-depends:
            hscolour == 1.20.*

test-suite doctest
    build-depends:
        base == 4.*
      , doctest == 0.9.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite hspec
    build-depends:
        base == 4.*
      , haskeleton
      , hspec == 1.8.*
      , HUnit == 1.2.*
      , QuickCheck == 2.6.*
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Haskeleton
        HaskeletonSpec
    type:
        exitcode-stdio-1.0

test-suite hlint
    build-depends:
        base == 4.*
      , hlint == 1.8.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

test-suite haddock
    build-depends:
        base == 4.*
      , process == 1.1.*
      , regex-compat == 0.95.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite hpc
    build-depends:
        base == 4.*
      , process == 1.1.*
      , regex-compat == 0.95.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0
