author:        Taylor Fausak
bug-reports:   https://github.com/tfausak/hop/issues
build-type:    Simple
cabal-version: >= 1.10
category:      Other
copyright:     2014 Taylor Fausak <taylor@fausak.me>
description:   This is meant to be a simple but complete Cabal package. It
               provides a library, an executable, a test suite, and some
               benchmarks. None of them really do anything.
               .
               The name comes from /H/askell n/op/.
homepage:      https://github.com/tfausak/hop
license-file:  LICENSE.txt
license:       MIT
maintainer:    taylor@fausak.me
name:          hop
synopsis:      The simplest Haskell program as a Cabal package.
version:       0.0.0

library
  build-depends:    base
  default-language: Haskell2010
  exposed-modules:  Hop
  hs-source-dirs:   source

executable hop
  build-depends:    base
  default-language: Haskell2010
  hs-source-dirs:   source
  main-is:          Main.hs

test-suite test
  build-depends:    base
                  , Cabal
                  , hop
                  , HTF
  default-language: Haskell2010
  ghc-options:      -fhpc -F -pgmF htfpp
  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0

benchmark bench
  build-depends:    base
                  , criterion
                  , hop
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
