name: ${packageName}
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 ${author} <${email}>
maintainer: ${author} <${email}>
synopsis: TODO
description:
    TODO
category: TODO
author: ${author} <${email}>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        ${moduleName}
        -- HASKELETON: New.Module
    build-depends:
        base ==4.*
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

executable ${packageName}
    main-is: Main.hs
    build-depends:
        base -any,
        ${packageName} -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        ${packageName} -any,
        hspec ==2.*,
        HUnit -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: library test-suite
    other-modules:
        ${moduleName}
        -- HASKELETON: New.Module
        ${moduleName}Spec
        -- HASKELETON: New.ModuleSpec
    ghc-options: -fhpc -Wall -Werror
test-suite examples
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        Glob ==0.7.*,
        doctest ==0.9.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite coverage
    type: exitcode-stdio-1.0
    main-is: HPC.hs
    build-depends:
        base -any,
        directory ==1.*,
        process ==1.*,
        regex-compat >=0.90
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite documentation
    type: exitcode-stdio-1.0
    main-is: Haddock.hs
    build-depends:
        base -any,
        process -any,
        regex-compat -any
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
test-suite style
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends:
        base -any,
        hlint ==1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror

benchmark benchmarks

    if impl(ghc >=7.8)
        build-depends:
            criterion ==1.*

    if impl(ghc <7.8)
        build-depends:
            criterion ==0.6.*,
            hastache <0.6,
            statistics <0.11
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        base -any,
        ${packageName} -any
    default-language: Haskell2010
    hs-source-dirs: benchmark
